--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ solvers/Make/linux64GccDPInt32Opt/options
 solvers/Make/linux64GccDPInt32Opt/sourceFiles
 solvers/Make/files
 solvers/Make/linux64GccDPInt32Opt/variables
+solvers/Make/linux64GccDPInt32Opt/files
+solvers/Make/linux64GccDPInt32Opt/files
+solvers/Make/linux64GccDPInt32Opt/muFlowRT.C.dep
+solvers/Make/linux64GccDPInt32Opt/muFlowRT.o
+/solvers/Make
+/solvers/Make
+/solvers
